--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Mesto</title>
   </head>
 
-  <body>
+  <body class="body">
     <div class="page">
       <header class="header">
         <img class="header__logo" src="./images/logo.svg" alt="Логотип сайта"/>
@@ -16,46 +16,63 @@
     </div>
     <main class="main">
       <section class="profile">
-        <img class="profile__avatar" src="./images/avatar.png" alt="Аватар"/>
+         <img class="profile__avatar" src="./images/avatar.png" alt="Аватар"/>
         <div class="profile__info">
-          <h1 class="">Жак-Ив Кусто</h1>
-          <p class="">Исследователь океана</p>
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <img class="profile__pencil" src="./images/pencil.svg" alt="карандаш"/>
+          <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <div class="profile_button">+</div>
+        <div class="button">
+          <img class="profile__plus" src="./images/plus.svg" alt="добавить"/>
+        </div>
       </section>
       <section class="mesto">
         <div class="mesto__element">
           <img class="mesto__img" src="./images/karachayevsk.png" alt="Карачаевск"/>
-          <h2 class="mesto__title">Карачаевск</h2>
-          <img class="mesto__like" src="./images/like.svg" alt="like"/>
+          <div class="reaction">
+            <h2 class="mesto__title">Карачаевск</h2>
+            <img class="mesto__like" src="./images/like.svg" alt="like"/>
+          </div>
         </div>
         <div class="mesto__element">
           <img class="mesto__img" src="./images/elbrus.png" alt="Эльбрус"/>
-          <h2 class="mesto__title">Гора Эльбрус</h2>
-          <img class="mesto__like" src="./images/like.svg" alt="like"/>
+          <div class="reaction">
+            <h2 class="mesto__title">Гора Эльбрус</h2>
+            <img class="mesto__like" src="./images/like.svg" alt="like"/>
+          </div>
         </div>
         <div class="mesto__element">
           <img class="mesto__img" src="./images/Dombay.png" alt="Домбай"/>
-          <h2 class="mesto__title">Домбай</h2>
-          <img class="mesto__like" src="./images/like.svg" alt="like"/>
+          <div class="reaction">
+            <h2 class="mesto__title">Домбай</h2>
+            <img class="mesto__like" src="./images/like.svg" alt="like"/>
+          </div>
         </div>
         <div class="mesto__element">
           <img class="mesto__img" src="./images/karachayevsk.png" alt="Карачаевск"/>
-          <h2 class="mesto__title">Карачаевск</h2>
-          <img class="mesto__like" src="./images/like.svg" alt="like"/>
+          <div class="reaction">
+            <h2 class="mesto__title">Карачаевск</h2>
+            <img class="mesto__like" src="./images/like.svg" alt="like"/>
+          </div>
         </div>
         <div class="mesto__element">
           <img class="mesto__img" src="./images/elbrus.png" alt="Эльбрус"/>
-          <h2 class="mesto__title">Гора Эльбрус</h2>
-          <img class="mesto__like" src="./images/like.svg" alt="like"/>
+          <div class="reaction">
+            <h2 class="mesto__title">Гора Эльбрус</h2>
+            <img class="mesto__like" src="./images/like.svg" alt="like"/>
+          </div>
         </div>
         <div class="mesto__element">
           <img class="mesto__img" src="./images/Dombay.png" alt="Домбай"/>
-          <h2 class="mesto__title">Домбай</h2>
-          <img class="mesto__like" src="./images/like.svg" alt="like"/>
+          <div class="reaction">
+            <h2 class="mesto__title">Домбай</h2>
+            <img class="mesto__like" src="./images/like.svg" alt="like"/>
+          </div>
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <h3 class="footer__text">© 2020 Mesto Russia</h3>
+    </footer>
   </body>
 </html>
