--- a/index.html
+++ b/index.html
@@ -13,79 +13,83 @@
       <header class="header">
         <img class="header__logo" src="./images/logo.svg" alt="Логотип сайта"/>
       </header>
-    </div>
-    <main class="main">
-      <section class="profile">
-        <div class="info">
-          <img class="profile__avatar" src="./images/avatar.png" alt="Аватар"/>
-          <div class="profile__info">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <button class="profile__button">
-              <img class="button__pencil" src="./images/pencil.svg" alt="карандаш"/>
-            </button>
-            <p class="profile__subtitle">Исследователь океана</p>
-          </div>
-        </div>
-        <button class="button">
-          <img class="profile__plus" src="./images/plus.svg" alt="добавить"/>
-        </button>
-      </section>
-      <section class="mesto">
-        <div class="mesto__element">
-          <img class="mesto__img" src="./images/karachayevsk.png" alt="Карачаевск"/>
-          <div class="reaction">
-            <h2 class="mesto__title">Карачаевск</h2>
-            <img class="mesto__like" src="./images/like.svg" alt="like"/>
-          </div>
-        </div>
-        <div class="mesto__element">
-          <img class="mesto__img" src="./images/elbrus.png" alt="Эльбрус"/>
-          <div class="reaction">
-            <h2 class="mesto__title">Гора Эльбрус</h2>
-            <img class="mesto__like" src="./images/like.svg" alt="like"/>
-          </div>
-        </div>
-        <div class="mesto__element">
-          <img class="mesto__img" src="./images/Dombay.png" alt="Домбай"/>
-          <div class="reaction">
-            <h2 class="mesto__title">Домбай</h2>
-            <img class="mesto__like" src="./images/like.svg" alt="like"/>
-          </div>
-        </div>
-        <div class="mesto__element">
-          <img class="mesto__img" src="./images/karachayevsk.png" alt="Карачаевск"/>
-          <div class="reaction">
-            <h2 class="mesto__title">Карачаевск</h2>
-            <img class="mesto__like" src="./images/like.svg" alt="like"/>
-          </div>
-        </div>
-        <div class="mesto__element">
-          <img class="mesto__img" src="./images/elbrus.png" alt="Эльбрус"/>
-          <div class="reaction">
-            <h2 class="mesto__title">Гора Эльбрус</h2>
-            <img class="mesto__like" src="./images/like.svg" alt="like"/>
-          </div>
-        </div>
-        <div class="mesto__element">
-          <img class="mesto__img" src="./images/Dombay.png" alt="Домбай"/>
-          <div class="reaction">
-            <h2 class="mesto__title">Домбай</h2>
-            <img class="mesto__like" src="./images/like.svg" alt="like"/>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <h3 class="footer__text">© 2020 Mesto Russia</h3>
-    </footer>
 
-    <div class="popup">
-      <img  class="popup__close" src="./images/Close.png" alt="Закрыть">
-      <div class="popup__container">
-        <h1 class="popup__title">Редактировать профиль</h1>
-        <input type="text" class="popup__text popup__name" placeholder="Жак-Ив Кусто">
-        <input type="text" class="popup__text popup__job" placeholder="Исследователь океана">
-        <button class="popup__button">Сохранить</button>
+      <main class="main">
+        <section class="profile">
+          <div class="info">
+            <img class="profile__avatar" src="./images/avatar.png" alt="Аватар"/>
+            <div class="profile__info">
+                <h1 class="profile__title">Жак-Ив Кусто</h1>
+                <button class="profile__button">
+                  <img class="button__pencil" src="./images/pencil.svg" alt="карандаш"/>
+                </button>
+              </span>
+              <p class="profile__subtitle">Исследователь океана</p>
+            </div>
+          </div>
+          <button class="button">
+            <img class="profile__plus" src="./images/plus.svg" alt="добавить"/>
+          </button>
+        </section>
+        <section class="mesto">
+          <div class="mesto__element">
+            <img class="mesto__img" src="./images/karachayevsk.png" alt="Карачаевск"/>
+            <div class="reaction">
+              <h2 class="mesto__title">Карачаевск</h2>
+              <button class="mesto__like"></button>
+            </div>
+          </div>
+          <div class="mesto__element">
+            <img class="mesto__img" src="./images/elbrus.png" alt="Эльбрус"/>
+            <div class="reaction">
+              <h2 class="mesto__title">Гора Эльбрус</h2>
+              <button class="mesto__like"></button>
+            </div>
+          </div>
+          <div class="mesto__element">
+            <img class="mesto__img" src="./images/Dombay.png" alt="Домбай"/>
+            <div class="reaction">
+              <h2 class="mesto__title">Домбай</h2>
+              <button class="mesto__like"></button>
+            </div>
+          </div>
+          <div class="mesto__element">
+            <img class="mesto__img" src="./images/karachayevsk.png" alt="Карачаевск"/>
+            <div class="reaction">
+              <h2 class="mesto__title">Карачаевск</h2>
+              <button class="mesto__like"></button>
+            </div>
+          </div>
+          <div class="mesto__element">
+            <img class="mesto__img" src="./images/elbrus.png" alt="Эльбрус"/>
+            <div class="reaction">
+              <h2 class="mesto__title">Гора Эльбрус</h2>
+              <button class="mesto__like"></button>
+            </div>
+          </div>
+          <div class="mesto__element">
+            <img class="mesto__img" src="./images/Dombay.png" alt="Домбай"/>
+            <div class="reaction">
+              <h2 class="mesto__title">Домбай</h2>
+              <button class="mesto__like"></button>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer class="footer">
+        <h3 class="footer__text">© 2020 Mesto Russia</h3>
+      </footer>
+
+      <div class="popup">
+        <img  class="popup__close" src="./images/Close.png" alt="Закрыть">
+        <div class="popup__container">
+          <h1 class="popup__title">Редактировать профиль</h1>
+          <form class="popup__form">
+            <input type="text" class="popup__text popup__name" placeholder="Жак-Ив Кусто">
+            <input type="text" class="popup__text popup__job" placeholder="Исследователь океана">
+            <button type="submit" class="popup__button">Сохранить</button>
+          </form>
+        </div>
       </div>
     </div>
 
