--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="profile__info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button class="profile__button">
-              <img class="button__pencil" src="./images/pencil.svg" alt="карандаш" />
+              <img class="profile__pencil" src="./images/pencil.svg" alt="карандаш" />
             </button>
             <p class="profile__subtitle">Исследователь океана</p>
           </div>
