--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <form name="popup__form" class="popup__form">
           <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Жак-Ив Кусто">
           <input type="text" name="popup__job" class="popup__text popup__job" placeholder="Исследователь океана">
-          <button type="submit" class="popup__button">Сохранить</button>
+          <button type="submit" id="saveprofile" class="popup__button">Сохранить</button>
         </form>
       </div>
       <div id="addcards" class="popup__container">
@@ -61,7 +61,7 @@
         <form name="popup__form" class="popup__form">
           <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Название">
           <input type="text" name="popup__job" class="popup__text popup__job" placeholder="Ссылка на картинку">
-          <button type="submit" class="popup__button">Сохранить</button>
+          <button type="submit" id="addpicture" class="popup__button">Сохранить</button>
         </form>
       </div>
     </div>
