--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         </form>
       </div>
       <div class="popup__picture">
-        <button type="button" class="popup__close">
-          <img class="popup__img" src="./images/Close.png" alt="Закрыть">
+        <button type="button"  class="popup__close">
+          <img class="popup__img" id="closepict" src="./images/Close.png" alt="Закрыть">
         </button>
         <img class="popup__screen" src="" alt="" />
         <h2 class="picture__name"></h2>
@@ -84,7 +84,6 @@
       </div>
     </li>
   </template>
-
 
   <script defer src="./script/script.js"></script>
 </body>
