--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <button type="button" class="popup__close">
           <img class="popup__img" id="closepict" src="./images/Close.png" alt="Закрыть">
         </button>
-        <img class="popup__screen" src="" alt="" />
+        <img class="popup__screen" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="Архыз" />
         <h2 class="picture__name"></h2>
       </div>
     </div>
@@ -77,7 +77,7 @@
   <template class="mesto__template">
     <li class="mesto__element">
       <button type="button" class="mesto__delete"></button>
-      <img class="mesto__img" type="button" src="" alt="" />
+      <img class="mesto__img" type="button" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="Архыз" />
       <div class="reaction">
         <h2 class="mesto__title"></h2>
         <button type="button" class="mesto__like"></button>
