--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <img class="popup__img" id="closepict" src="./images/Close.png" alt="Закрыть">
         </button>
         <img class="popup__screen" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="Архыз" />
-        <h2 class="picture__name"></h2>
+        <h2 class="popup__picture_name"></h2>
       </div>
     </div>
   </div>
