fix новое место

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="popup cardPopup">
-      <div class="popup__container">
+      <div class="popup__container popup__contcard">
         <button type="button" class="popup__close">
           <img class="popup__img" src="./images/Close.png" alt="Закрыть">
         </button>
