--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
         <button type="button" class="popup__close">
           <img class="popup__img" id="closepict" src="./images/Close.png" alt="Закрыть">
         </button>
-        <img class="popup__screen" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="Архыз" />
+        <img class="popup__screen" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg"
+          alt="Архыз" />
         <h2 class="popup__subname"></h2>
       </div>
     </div>
@@ -83,7 +84,8 @@
   <template class="mesto__template">
     <li class="mesto__element">
       <button type="button" class="mesto__delete"></button>
-      <img class="mesto__img" type="button" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="Архыз" />
+      <img class="mesto__img" type="button"
+        src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="Архыз" />
       <div class="reaction">
         <h2 class="mesto__title"></h2>
         <button type="button" class="mesto__like"></button>
@@ -91,7 +93,7 @@
     </li>
   </template>
 
-  <script defer src="./script/newscript.js"></script>
+  <script defer src="./script/script.js"></script>
 </body>
 
 </html>
