--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form name="popup__form" class="popup__form">
-          <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Жак-Ив Кусто">
-          <input type="text" name="popup__job" class="popup__text popup__job" placeholder="Исследователь океана">
+          <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Введите имя">
+          <input type="text" name="popup__job" class="popup__text popup__job" placeholder="Введите профессию">
           <button type="submit" id="saveprofile" class="popup__button">Сохранить</button>
         </form>
       </div>
