--- a/index.html
+++ b/index.html
@@ -47,11 +47,15 @@
           <img class="popup__img" src="./images/Close.png" alt="Закрыть">
         </button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="popup__form" class="popup__form">
-          <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Введите имя" required minlength="2" maxlength="40">
-          <span class="form__input-error">error name</span>
-          <input type="text" name="popup__job" class="popup__text popup__job" placeholder="Введите профессию" required minlength="2" maxlength="200">
-          <span class="form__input-error">error job</span>
+        <form name="popup__form" class="popup__form" novalidate>
+          <section class="popup__section">
+            <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Введите имя" required minlength="2" maxlength="40">
+            <span class="form__input-error"></span>
+          </section>
+          <section class="popup__section">
+            <input type="text" name="popup__job" class="popup__text popup__job" placeholder="Введите профессию" required minlength="2" maxlength="200">
+            <span class="form__input-error"></span>
+          </section>
           <button type="submit" id="saveprofile" class="popup__button">Сохранить</button>
         </form>
       </div>
@@ -64,10 +68,14 @@
         </button>
         <h2 class="popup__title">Новое место</h2>
         <form name="popup__form" class="popup__form">
-          <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Название" required minlength="2" maxlength="30">
-          <span class="form__input-error">error name</span>
-          <input type="text" name="popup__job" class="popup__text popup__job" placeholder="Ссылка на картинку" required>
-          <span class="form__input-error">error src</span>
+          <section class="popup__section">
+            <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Название" required minlength="2" maxlength="30">
+            <span class="form__input-error"></span>
+          </section>
+          <section class="popup__section">
+            <input type="text" name="popup__job" class="popup__text popup__job" placeholder="Ссылка на картинку" required>
+            <span class="form__input-error"></span>
+          </section>
           <button type="submit" id="addpicture" class="popup__button">Сохранить</button>
         </form>
       </div>
