--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h3 class="footer__text">© 2020 Mesto Russia</h3>
     </footer>
 
-    <div class="popup profilePopup">
+    <div class="popup profilePopup popupValidation  ">
       <div class="popup__container">
         <button type="button" class="popup__close">
           <img class="popup__img" src="./images/Close.png" alt="Закрыть">
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <div class="popup cardPopup">
+    <div class="popup cardPopup popupValidation">
       <div class="popup__container popup__contcard">
         <button type="button" class="popup__close">
           <img class="popup__img" src="./images/Close.png" alt="Закрыть">
@@ -105,8 +105,8 @@
     </li>
   </template>
 
-  <script defer src="./script/script.js"></script>
   <script defer src="./script/validate.js"></script>
+  <script defer src="./script/script.js"></script>
 </body>
 
 </html>
