--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <form name="popup__form" class="popup__form" novalidate>
           <section class="popup__section">
             <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Введите имя" required minlength="2" maxlength="40">
-            <span class="form__input-error"></span>
+            <span class="popup__input-error"></span>
           </section>
           <section class="popup__section">
             <input type="text" name="popup__job" class="popup__text popup__job" placeholder="Введите профессию" required minlength="2" maxlength="200">
-            <span class="form__input-error"></span>
+            <span class="popup__input-error"></span>
           </section>
           <button type="submit" id="saveprofile" class="popup__button">Сохранить</button>
         </form>
@@ -70,11 +70,11 @@
         <form name="popup__form" class="popup__form">
           <section class="popup__section">
             <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Название" required minlength="2" maxlength="30">
-            <span class="form__input-error"></span>
+            <span class="popup__input-error"></span>
           </section>
           <section class="popup__section">
             <input type="text" name="popup__job" class="popup__text popup__job" placeholder="Ссылка на картинку" required>
-            <span class="form__input-error"></span>
+            <span class="popup__input-error"></span>
           </section>
           <button type="submit" id="addpicture" class="popup__button">Сохранить</button>
         </form>
