--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <img class="popup__img" src="./images/Close.png" alt="Закрыть">
         </button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="popup__form" class="popup__form" novalidate>
+        <form name="profile__form" class="popup__form" novalidate>
           <section class="popup__section">
             <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Введите имя" required minlength="2" maxlength="40">
             <span class="popup__input-error"></span>
@@ -67,7 +67,7 @@
           <img class="popup__img" src="./images/Close.png" alt="Закрыть">
         </button>
         <h2 class="popup__title">Новое место</h2>
-        <form name="popup__form" class="popup__form">
+        <form name="card-form" class="popup__form">
           <section class="popup__section">
             <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Название" required minlength="2" maxlength="30">
             <span class="popup__input-error"></span>
