fix комментариев ревьюевера

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <span class="popup__input-error"></span>
           </section>
           <section class="popup__section">
-            <input type="text" name="popup__job" class="popup__text popup__job" placeholder="Ссылка на картинку" required>
+            <input type="url" name="popup__job" class="popup__text popup__job" placeholder="Ссылка на картинку" required>
             <span class="popup__input-error"></span>
           </section>
           <button type="submit" id="addpicture" class="popup__button">Сохранить</button>
