--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </div>
 
   <template class="mesto__template">
-    <li class="mesto__element">
+    <section class="mesto__element">
       <button type="button" class="mesto__delete"></button>
       <img class="mesto__img" type="button"
         src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="Архыз" />
@@ -102,11 +102,13 @@
         <h2 class="mesto__title"></h2>
         <button type="button" class="mesto__like"></button>
       </div>
-    </li>
+    </section>
   </template>
 
   <script defer src="./script/validate.js"></script>
   <script defer src="./script/script.js"></script>
+  <script defer src="./script/Card.js"></script>
+  <script defer src="./script/FormValidator.js"></script>
 </body>
 
 </html>
