передача данных с js в js

--- a/index.html
+++ b/index.html
@@ -105,10 +105,11 @@
     </section>
   </template>
 
-  <script defer src="./script/validate.js"></script>
-  <script defer src="./script/script.js"></script>
-  <script defer src="./script/Card.js"></script>
-  <script defer src="./script/FormValidator.js"></script>
+  <script defer type="module" src="./script/validate.js"></script>
+  <script defer type="module" src="./script/Card.js"></script>
+  <script defer type="module" src="./script/FormValidator.js"></script>
+  <script defer type="module" src="./script/script.js"></script>
+
 </body>
 
 </html>
