--- a/index.html
+++ b/index.html
@@ -105,10 +105,8 @@
     </section>
   </template>
 
-  <script defer type="module" src="./script/validate.js"></script>
-  <script defer type="module" src="./script/Card.js"></script>
-  <script defer type="module" src="./script/FormValidator.js"></script>
-  <script defer type="module" src="./script/script.js"></script>
+  <script  type="module" src="./script/script.js" defer></script>
+
 
 </body>
 
