--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
     </section>
   </template>
-  <script  type="module" src="./script/script.js" defer></script>
+  <!-- <script  type="module" src="/dist/main.js" defer></script> -->
 </body>
 
 </html>
