--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           <div class="profile__info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button type="button" class="profile__button">
-              <img class="profile__pencil" src="<%=require('./images/pencil.svg')%>" alt="карандаш" />
+              <img class="profile__pencil" src="<%=require('./images/pencil.svg')%>" alt="Редактировать" />
             </button>
             <p class="profile__subtitle">Исследователь океана</p>
           </div>
