--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="./pages/index.css" /> -->
   <title>Mesto</title>
 </head>
 
@@ -86,7 +85,7 @@
         <button type="button" class="popup__close">
           <img class="popup__img" id="closepict" src="<%=require('./images/Close.png')%>" alt="Закрыть">
         </button>
-        <img class="popup__screen" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg"
+        <img class="popup__screen" src="#"
           alt="Архыз" />
         <h2 class="popup__subname"></h2>
       </div>
@@ -97,14 +96,13 @@
     <section class="mesto__element">
       <button type="button" class="mesto__delete"></button>
       <img class="mesto__img" type="button"
-        src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="Архыз" />
+      src="#" alt="Архыз" />
       <div class="reaction">
         <h2 class="mesto__title"></h2>
         <button type="button" class="mesto__like"></button>
       </div>
     </section>
   </template>
-  <!-- <script  type="module" src="/dist/main.js" defer></script> -->
 </body>
 
 </html>
