--- a/src/index.html
+++ b/src/index.html
@@ -127,11 +127,14 @@
   <template class="mesto__template">
     <section class="mesto__element">
       <button type="button" class="mesto__delete"></button>
-      <img class="mesto__img" type="button"
+      <img class="mesto__img" type="button" id=""
       src="#" alt="Архыз" />
       <div class="reaction">
         <h2 class="mesto__title"></h2>
-        <button type="button" class="mesto__like"></button>
+        <div class="like">
+          <button type="button" class="mesto__like"></button>
+          <div class="like__score"></div>
+        </div>
       </div>
     </section>
   </template>
