Обновление аватарки на сервере

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
             <input type="url" name="popup__job" class="popup__text popup__job" placeholder="Ссылка на картинку" required>
             <span class="popup__input-error"></span>
           </section>
-          <button type="submit" id="addpicture" class="popup__button">Сохранить</button>
+          <button type="submit" id="changeavatarsubmit" class="popup__button">Сохранить</button>
         </form>
       </div>
     </div>
