--- a/src/index.html
+++ b/src/index.html
@@ -51,11 +51,11 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <form name="profile__form" class="popup__form" novalidate>
           <section class="popup__section">
-            <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Введите имя" required minlength="2" maxlength="40">
+            <input type="text" name="name" class="popup__text popup__name" placeholder="Введите имя" required minlength="2" maxlength="40">
             <span class="popup__input-error"></span>
           </section>
           <section class="popup__section">
-            <input type="text" name="popup__job" class="popup__text popup__job" placeholder="Введите профессию" required minlength="2" maxlength="200">
+            <input type="text" name="about" class="popup__text popup__job" placeholder="Введите профессию" required minlength="2" maxlength="200">
             <span class="popup__input-error"></span>
           </section>
           <button type="submit" id="saveprofile" class="popup__button">Сохранить</button>
@@ -71,11 +71,11 @@
         <h2 class="popup__title">Новое место</h2>
         <form name="card-form" class="popup__form">
           <section class="popup__section">
-            <input type="text" name="popup__name" class="popup__text popup__name" placeholder="Название" required minlength="2" maxlength="30">
+            <input type="text" name="name" class="popup__text popup__name" placeholder="Название" required minlength="2" maxlength="30">
             <span class="popup__input-error"></span>
           </section>
           <section class="popup__section">
-            <input type="url" name="popup__job" class="popup__text popup__job" placeholder="Ссылка на картинку" required>
+            <input type="url" name="about" class="popup__text popup__job" placeholder="Ссылка на картинку" required>
             <span class="popup__input-error"></span>
           </section>
           <button type="submit" id="addpicture" class="popup__button">Сохранить</button>
@@ -115,7 +115,7 @@
         <h2 class="popup__title">Обновить аватар</h2>
         <form name="card-form" class="popup__form">
           <section class="popup__section">
-            <input type="url" name="popup__job" class="popup__text popup__job" placeholder="Ссылка на картинку" required>
+            <input type="url" name="avatar" class="popup__text popup__job" placeholder="Ссылка на картинку" required>
             <span class="popup__input-error"></span>
           </section>
           <button type="submit" id="changeavatarsubmit" class="popup__button">Сохранить</button>
@@ -126,7 +126,7 @@
   </div>
 
   <template class="mesto__template">
-    <section class="mesto__element">
+    <section id="" class="mesto__element">
       <button type="button" class="mesto__delete"></button>
       <img class="mesto__img" type="button" id=""
       src="#" alt="Архыз" />
