--- a/src/index.html
+++ b/src/index.html
@@ -101,8 +101,7 @@
         </button>
         <h2 class="popup__title">Вы уверены?</h2>
         <form name="card-form" class="popup__form">
-          <input type="hidden" id="" name="payload" class="popup__text">
-          <button type="submit" id="deletecard" class="popup__button">Да</button>
+          <button type="submit" id="" class="popup__button">Да</button>
         </form>
       </div>
     </div>
